--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         <h2>프로젝트</h2>
         <div class="project">
             <h3>1번 프로젝트</h3>
-            <p>내용 없음</p>
+            <p>내용 있음 .. 수정한 내용임</p>
         </div>
         <div class="project">
             <h3>2번 프로젝트</h3>
